Add support for scala 2_12

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: scala
-script: "sbt clean coverage test"
-after_success: "sbt coveralls"
+script: "sbt +clean +coverage +test"
+after_success: "sbt +coveralls"
