Add support for scala 2_12 (#122)
* Add support for scala 2_12
* use java8 in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: scala
-script: "sbt clean coverage test"
-after_success: "sbt coveralls"
+jdk:
+  - oraclejdk8
+script: "sbt +clean +coverage +test"
+after_success: "sbt +coveralls"
