--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: scala
 
 jdk:
-  - oraclejdk8
+  - openjdk11
 
 before_cache:
   - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
